base/namespaces/monkey/monkey/gw-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: monkey-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: monkey
spec:
  hosts:
    - "*"
  gateways:
    - monkey-gateway
  http:
  - name: "monkey"
    match:
    - uri:
        prefix: "*"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: monkey
        port:
          number:  7777
  - name: "info"
    match:
    - uri:
        prefix: "/info"
    rewrite:
      uri: "/"
    route:
    - destination:
        host:  podinfo.info.svc.cluster.local
        port:
          number:  9898
